# Task3-Camera-movement

./: CMakeLists.txt  Report.md  bodyParts.cpp  bodyParts.h  imageLoader.cpp  imageLoader.h  main.cpp
